[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/panel.png" type="Texture" id=3]
[ext_resource path="res://EnemyCrawler.tscn" type="PackedScene" id=4]
[ext_resource path="res://number.gd" type="Script" id=5]

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="startPosition" type="Position2D" parent="."]
position = Vector2( 320, 600 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 800, 360 )
texture = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 79.377, 126.95 )

[node name="startTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemyCrawler" parent="." instance=ExtResource( 4 )]
position = Vector2( 296.334, -538.621 )

[node name="EnemyCrawler2" parent="." instance=ExtResource( 4 )]
position = Vector2( 107.583, -5210.09 )

[node name="EnemyCrawler3" parent="." instance=ExtResource( 4 )]
position = Vector2( 316.555, -3924.33 )

[node name="EnemyCrawler4" parent="." instance=ExtResource( 4 )]
position = Vector2( 447.587, -1626.23 )

[node name="EnemyCrawler5" parent="." instance=ExtResource( 4 )]
position = Vector2( 155.286, -2866 )

[node name="lives" type="RichTextLabel" parent="."]
margin_left = 656.0
margin_top = 147.0
margin_right = 726.0
margin_bottom = 166.0
rect_scale = Vector2( 3, 3 )
text = "Lives:"
scroll_active = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameOver" type="RichTextLabel" parent="."]
margin_left = 119.0
margin_top = 324.0
margin_right = 198.0
margin_bottom = 339.0
rect_scale = Vector2( 5, 5 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Timer" parent="."]
wait_time = 10.0

[connection signal="gameover" from="." to="." method="_on_main_gameover"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="startTimer" to="." method="_on_startTimer_timeout"]
[connection signal="timeout" from="quit" to="." method="_on_quit_timeout"]
